# my-spotify-analytics

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml
scripts/: build_site.py
src/my_spotify_analytics/: build.py  visualizations.py
tests/: test_build.py
